--- a/frontend/src/components/Styles/loadingSpinner.css
+++ b/frontend/src/components/Styles/loadingSpinner.css
@@ -1,32 +1,25 @@
-/* Container to center the spinner */
 .spinner-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh; /* Full viewport height */
-  width: 100vw; /* Full viewport width */
-  position: fixed; /* Fix the spinner to the screen */
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(
-    255,
-    255,
-    255,
-    0.8
-  ); /* Optional: Add a semi-transparent background */
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 /* Spinner element */
 .spinner {
-  border: 8px solid rgba(0, 0, 0, 0.1); /* Light border */
-  border-top: 8px solid #007bff; /* Blue border for the spinning part */
-  border-radius: 50%; /* Make it a circle */
-  width: 80px; /* Large size for the spinner */
-  height: 80px; /* Large size for the spinner */
-  animation: spin 1s linear infinite; /* Spin animation */
+  border: 8px solid rgba(0, 0, 0, 0.1);
+  border-top: 8px solid #007bff;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  animation: spin 1s linear infinite;
 }
 
-/* Keyframes for the spinning animation */
 @keyframes spin {
   0% {
     transform: rotate(0deg);
