--- a/frontend/src/components/Styles/params.css
+++ b/frontend/src/components/Styles/params.css
@@ -3,29 +3,27 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 80px; /* Padding from the header to the inputs */
+  padding-top: 80px;
   height: 100vh;
-  justify-content: flex-start; /* Align items to the top */
-  background-color: #b0c4de; /* Light bluish grey background */
-  color: #333; /* Ensure text is dark enough to contrast against the background */
+  justify-content: flex-start;
+  background-color: #b0c4de;
+  color: #333;
   font-family: "Arial", sans-serif;
-  transition: background 0.3s ease; /* Smooth transition on background */
-  position: relative; /* To make sure content appears above the rotating cube */
-  z-index: 1; /* Ensure content is above the cube */
+  transition: background 0.3s ease;
+  position: relative;
+  z-index: 1;
 }
 
-/* Optional: Adding a box shadow around the page */
 .params-page {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-/* Ensure the rotating cube is always in the background */
 .params-page::before {
   content: "";
-  position: fixed; /* Make it fixed in place */
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1; /* Make sure it stays behind the page content */
+  z-index: -1;
 }
