--- a/frontend/src/components/Styles/stockBody.css
+++ b/frontend/src/components/Styles/stockBody.css
@@ -1,18 +1,18 @@
 .stocks-main {
-  background-image: url("./images/finalBackground.png"); /* Add the URL to your background image */
-  background-size: cover; /* Makes sure the image covers the entire container */
-  background-position: center; /* Centers the image */
-  background-repeat: no-repeat; /* Ensures the image doesn't repeat */
-  min-height: 100vh; /* Ensures the background covers the full page */
+  background-image: url("./images/finalBackground.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
 }
 .stock-body {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 4rem 2rem; /* Increased top padding */
+  padding: 4rem 2rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  min-height: 100vh; /* Ensure it takes full viewport height */
+  min-height: 100vh;
 }
 
 @media (max-width: 768px) {
