--- a/frontend/src/components/Styles/chartHeader.css
+++ b/frontend/src/components/Styles/chartHeader.css
@@ -36,3 +36,24 @@
     padding: 2rem 0 1rem 0;
   }
 }
+.form-heading {
+  background: linear-gradient(90deg, #3b82f6, #000000);
+  -webkit-background-clip: text;
+  color: transparent;
+  font-weight: bold;
+  font-size: 2.5rem;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+@keyframes gradientBorder {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
